# sematic_search

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  test_db.py
app/: db.py  main.py  models.py
app/api/v1/: auth.py  document.py  endpoints.py  folder.py
app/api/v2/: document_I.py  endpoints.py
app/core/: auth.py  config.py  security.py
app/models/: database.py
app/models.old/: document.py  folder.py  message.py
app/services/: llm_service.py  ml_service.py  pdf_service.py  storage_service.py  worker.py
frontend/: app.py  auth_bridge.py  index.html  package-lock.json  package.json  vite.config.js
frontend/css/: auth.css  chat.css  components.css  layout.css  vars.css  workspace.css
frontend/js/: api.js  auth.js  chat.js  folders.js  main.js  state.js  upload.js  utils.js  workspace.js
rust_parser/: Cargo.toml  pyproject.toml
rust_parser/src/: lib.rs
storage/: hashes.json  index.faiss  metadata.json
